# qtapps

./: CMakeLists.txt  Main.qml  main.cpp
qml/: Main.qml
qml/pages/: HomePage.qml
src/: main.cpp
src/controllers/: HomePageController.cpp  HomePageController.h
